# PLAXIS-MCP

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/: mcp-client-config.json
scripts/: smoke_test.py
src/plaxis_mcp/: __init__.py  core.py  server.py
tests/: test_core.py
